# swarm-perception

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
controllers/: CMakeLists.txt
controllers/epuck_waypoint_tracking/: CMakeLists.txt  epuck_waypoint_tracking.cpp  epuck_waypoint_tracking.h
controllers/robot/: CMakeLists.txt  robot.cpp  robot.h
docker/: Dockerfile  experiment.sh
experiments/: create_argos_files.py  epuck_waypoint_tracking.argos  run_simulations.sh  target_tracking.argos  target_tracking_webviz.argos  trial_ids.txt
experiments/study2/: practice.argos  practice1.argos  practice2.argos  practice3.argos  template.argos  trial10.argos  trial100.argos  trial105.argos  trial107.argos  trial109.argos  trial115.argos  trial119.argos  trial121.argos  trial122.argos  trial14.argos  trial17.argos  trial18.argos  trial20.argos  trial21.argos  trial22.argos  trial23.argos  trial26.argos  trial34.argos  trial36.argos  trial40.argos  trial49.argos  trial50.argos  trial51.argos  trial6.argos  trial60.argos  trial62.argos  trial63.argos  trial64.argos  trial65.argos  trial66.argos  trial7.argos  trial70.argos  trial71.argos  trial82.argos  trial85.argos  (+5 more)
loop_functions/: CMakeLists.txt
loop_functions/target_tracking_loop_functions/: CMakeLists.txt  target_tracking_loop_functions.cpp  target_tracking_loop_functions.h  target_tracking_qt_user_functions.cpp  target_tracking_qt_user_functions.h  target_tracking_webviz_user_functions.cpp  target_tracking_webviz_user_functions.h
loop_functions/waypoint_tracking_loop_functions/: CMakeLists.txt  waypoint_tracking_loop_functions.cpp  waypoint_tracking_loop_functions.h  waypoint_tracking_qt_user_functions.cpp  waypoint_tracking_qt_user_functions.h
scripts/: create_video.py
utility/: CMakeLists.txt  robot_message.cpp  robot_message.h
web_app/: app.py  create_trial_pages.py  worker.py
web_app/templates/: end_page.html  experiment_page.html  practice_page.html  trial1.html  (+23 more)
web_client/: index.html  package-lock.json  package.json
(+6 files in other folders)
